# racing-odds-scraper-rs

./: Cargo.toml
docs/: readme.md
src/scraper/: browser.rs  browser_group.rs  main.rs
src/scraper/extensions/: browser_engine.rs  datetime_extensions.rs  mod.rs  rhc_extensions.rs  str_extension.rs  vec_extension.rs
src/scraper/hosts/: mod.rs
src/scraper/hosts/betfair/: betfair_constants.rs  betfair_event_tab.rs  betfair_page.rs  betfair_schedule_page.rs  betfair_schedule_tab.rs  betfair_tab.rs  mod.rs
src/scraper/models/: contestant_odds.rs  event.rs  events.rs  mod.rs  money.rs  odds.rs
src/scraper/orchestrators/: mod.rs
src/scraper/pages/: mod.rs  page.rs  schedule_page.rs
src/scraper/tabs/: event_tab.rs  events_tab.rs  mod.rs  schedule_tab.rs  tab.rs
src/server/: main.rs
