[package]
name = "racing-odds-scraper-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scraper"
path = "src/scraper/main.rs"

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.57"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", branch = "main"}
serde_json = "1.0"
chrono = "0.4.11"