[package]
name = "racing-odds-scraper-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scraper"
path = "src/scraper/main.rs"

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.57"
rand = "0.8.5"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"] }
failure = "0.1.8"
serde_json = "1.0"
chrono = "0.4.11"
anyhow = "1.0.65"